kubernetes/nginx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Namespace","metadata":{"name":"nginx-ingress"}}
