kubernetes/nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - calum.run
        - argocd.calum.run
  rules:
    - host: calum.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-application-template
                port:
                  number: 80
    - host: argocd.calum.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
